selfhost/test/typechecker/typedecl/error_invalid_eq_signature.2.out
Error at %FILE_NAME%:2:8
Invalid signature for method 'eq'
  |    func eq(self, other: Foo): Int {}
            ^
