selfhost/test/typechecker/typedecl/error_invalid_eq_signature.2.abra
type Foo {
  func eq(self, other: Foo): Int {}
}